--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mll.automapi</groupId>
@@ -26,11 +26,17 @@
     <sl4j.version>1.7.12</sl4j.version>
     <log4j.version>1.7.21</log4j.version>
     <slf4j-api.version>1.7.16</slf4j-api.version>
-
     <spring-boot.version>1.5.6.RELEASE</spring-boot.version>
+    <spring-boot-starter.version>1.5.6.RELEASE</spring-boot-starter.version>
+    <spring-boot-starter-web.version>1.5.6.RELEASE</spring-boot-starter-web.version>
+    <spring-boot-starter-test.version>1.5.6.RELEASE</spring-boot-starter-test.version>
+    <druid.version>1.1.9</druid.version>
+    <mysql-connector-java.version>5.1.21</mysql-connector-java.version>
   </properties>
 
+<dependencyManagement>
   <dependencies>
+    <!--test-->
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
       <groupId>org.testng</groupId>
@@ -38,7 +44,7 @@
       <version>${testng.wersion}</version>
       <scope>test</scope>
     </dependency>
-      <!--logback -->
+    <!--springboot-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
@@ -46,6 +52,38 @@
       <type>pom</type>
       <scope>import</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+      <version>${spring-boot-starter.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>${spring-boot-starter-web.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>${spring-boot-starter-test.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!--dao-->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>${druid.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector-java.version}</version>
+    </dependency>
+
+    <!--logback -->
+
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
@@ -62,11 +100,8 @@
       <version>${slf4j-api.version}</version>
     </dependency>
     <!--end logback-->
-
-
-
   </dependencies>
-
+</dependencyManagement>
   <repositories>
     <repository>
       <id>aliyun</id>
@@ -89,16 +124,6 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
-          <configuration>
-            <suiteXmlFiles>
-              <suiteXmlFile>APP.xml</suiteXmlFile>
-            </suiteXmlFiles>
           </configuration>
         </plugin>
       </plugins>
