--- a/excute/pom.xml
+++ b/excute/pom.xml
@@ -19,6 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <xmlFileName>APP.xml</xmlFileName>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -44,6 +45,13 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.bleeding182.sharedpreferences/annotations -->
+        <dependency>
+            <groupId>com.github.bleeding182.sharedpreferences</groupId>
+            <artifactId>annotations</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!-- 依赖reportNg 关联testNg-->
         <dependency>
             <groupId>org.uncommons</groupId>
@@ -119,16 +127,14 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
-
             <!-- 添加插件,添加ReportNg的监听器，修改最后的TestNg的报告 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.22.0</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/APP.xml</suiteXmlFile>
+                        <suiteXmlFile>src/test/resources/${xmlFileName}</suiteXmlFile>
                     </suiteXmlFiles>
                     <properties>
                         <property>
@@ -140,8 +146,8 @@
                             <value>org.uncommons.reportng.HTMLReporter</value>
                         </property>
                     </properties>
-                   <workingDirectory>target/</workingDirectory>
-                    <forkMode>always</forkMode>
+                    <workingDirectory>target/</workingDirectory>
+                    <!-- <forkMode>always</forkMode> -->
                 </configuration>
             </plugin>
         </plugins>
